// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't render snapshot button if it's a snapshot 1`] = `
<div
  className="sc-bdVaJa bxUDrD"
>
  <h2
    className="sc-bwzfXH hMIJcV"
  >
    Overview
  </h2>
  <span
    className="sc-htpNat KtFsv"
  >
    (
    )
  </span>
  <span
    className="sc-ifAKCX cFlEyZ"
  />
  <span
    className="sc-bxivhb bUZGRr"
  />
</div>
`;

exports[`shows snapshot url 1`] = `
<div
  className="sc-bdVaJa bxUDrD"
>
  <h2
    className="sc-bwzfXH hMIJcV"
  >
    Overview
  </h2>
  <span
    className="sc-htpNat KtFsv"
  >
    (
    )
  </span>
  <span
    className="sc-ifAKCX cFlEyZ"
  />
  <span
    className="sc-bxivhb bUZGRr"
  />
  <button
    className="sc-EHOje dPeXyk snapshotButton "
    onClick={[Function]}
  >
    <svg
      className="SecondaryNav-snapshotSvg"
    >
      snapshot.svg
    </svg>
    <span>
      Create a 
      <br />
      Snapshot
    </span>
  </button>
</div>
`;
